# sphinx-reloader-html

./: README.md  pyproject.toml  sphinxreloaderhtml.py
